# wine-mgr

./:  README.md  Cargo.toml  config.json
src/: main.rs
src/config/: alias.rs  config.rs  env.rs  log.rs  mod.rs
src/executor/: executor.rs  mod.rs  procs.rs
