[package]
name = "wine-mgr"
version = "0.1.0"
edition = "2021"
description = "simple wine manager!"
homepage = "https://github.com/wszxl516"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
clap = {version = "3.2.16",features =["derive"]}
serde_json = "1.0.2"
log = "0.4.17"
env_logger = "0.9.0"
cli-table = "0.4"
procfs = "0.14.0"
nix = {version = "0.24.1", features = ["signal"]}